# advent-of-code-2022

./: .gitignore  README.md  advent-of-code2022.cabal
app/: AoC01.hs  AoC02.hs  AoC03.hs  AoC04.hs  AoC05.hs  AoC06.hs  AoC07.hs  AoC08.hs  AoC09.hs  AoC10.hs  AoC11.hs  AoC12.hs  AoC13.hs  AoC14.hs  AoC15.hs  AoC16.hs  Common.hs  Utils.hs  template.hs
