cabal-version:      2.4
name:               advent-of-code2022
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis:           Haskell solutions to Advent of Code 2022

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
author:             Techno Tecna

-- An email address to which users can send suggestions, bug reports, and patches.
-- maintainer:

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: README.md

executable aoc01
    main-is:            AoC01.hs
    other-modules:      Common Utils
    build-depends:      base ^>=4.15.1.0,
                        deepseq
    hs-source-dirs:     app
    default-language:   Haskell2010

executable aoc02
    main-is:            AoC02.hs
    other-modules:      Common Utils
    build-depends:      base ^>=4.15.1.0,
                        deepseq
    hs-source-dirs:     app
    default-language:   Haskell2010

executable aoc03
    main-is:            AoC03.hs
    other-modules:      Common Utils
    build-depends:      base ^>=4.15.1.0,
                        deepseq
    hs-source-dirs:     app
    default-language:   Haskell2010

executable aoc04
    main-is:            AoC04.hs
    other-modules:      Common Utils
    build-depends:      base ^>=4.15.1.0,
                        deepseq
    hs-source-dirs:     app
    default-language:   Haskell2010

executable aoc05
    main-is:            AoC05.hs
    other-modules:      Common Utils
    build-depends:      base ^>=4.15.1.0,
                        deepseq
    hs-source-dirs:     app
    default-language:   Haskell2010

executable aoc06
    main-is:            AoC06.hs
    other-modules:      Common Utils
    build-depends:      base ^>=4.15.1.0,
                        deepseq
    hs-source-dirs:     app
    default-language:   Haskell2010

executable aoc07
    main-is:            AoC07.hs
    other-modules:      Common Utils
    build-depends:      base ^>=4.15.1.0,
                        deepseq
    hs-source-dirs:     app
    default-language:   Haskell2010

executable aoc08
    main-is:            AoC08.hs
    other-modules:      Common Utils
    build-depends:      base ^>=4.15.1.0,
                        deepseq
    hs-source-dirs:     app
    default-language:   Haskell2010

executable aoc09
    main-is:            AoC09.hs
    other-modules:      Common Utils
    build-depends:      base ^>=4.15.1.0,
                        deepseq
    hs-source-dirs:     app
    default-language:   Haskell2010

executable aoc10
    main-is:            AoC10.hs
    other-modules:      Common Utils
    build-depends:      base ^>=4.15.1.0,
                        deepseq
    hs-source-dirs:     app
    default-language:   Haskell2010

executable aoc11
    main-is:            AoC11.hs
    other-modules:      Common Utils
    build-depends:      base ^>=4.15.1.0,
                        deepseq
    hs-source-dirs:     app
    default-language:   Haskell2010

executable aoc12
    main-is:            AoC12.hs
    other-modules:      Common Utils
    build-depends:      base ^>=4.15.1.0,
                        deepseq
    hs-source-dirs:     app
    default-language:   Haskell2010

executable aoc13
    main-is:            AoC13.hs
    other-modules:      Common Utils
    build-depends:      base ^>=4.15.1.0,
                        deepseq
    hs-source-dirs:     app
    default-language:   Haskell2010
